# sql-agent-fork-from-Adam-Faik-

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: eval_app.py
src/agent/: __init__.py
src/agent/nodes/: execute.py  generate.py  plan.py
src/connectors/: base.py  csv_connector.py  mysql.py  postgresql.py  sqlite.py
src/llm/: cache.py  tracker.py
src/schema/: embedder.py
src/storage/: history.py
src/ui/: prompt_suggestions.py  schema_explorer.py
tests/unit/: test_connectors.py  test_history_store.py  test_llm_factory.py  test_prompt_suggestions.py  test_schema_embedder.py  test_tracker.py
tests/unit/test_nodes/: test_execute.py
